Fixed issue where merge check would consider own appointment as conflicting, fixed issue where the continuous period checkbox would not work because of wrapping Tooltip tag

--- a/src/components/AppointmentForm/AppointmentForm.styles.scss
+++ b/src/components/AppointmentForm/AppointmentForm.styles.scss
@@ -12,3 +12,13 @@
         }
     }
 }
+
+.continuous-space {
+    align-items: flex-start !important;
+
+    svg {
+        height: 20px;
+        width: 20px;
+        margin-top: 7px;
+    }
+}
